--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chat Page</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Todolist</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
-<body class="min-h-screen flex items-center justify-center bg-black bg-contain bg-center bg-no-repeat " style="background-image: url('https://ik.imagekit.io/jxnoajxft/Html/chatbg.png?updatedAt=1749470233316');">
-  <div class="w-[340px] bg-opacity-80 text-white">
-    <div class="bg-[#323f4b] text-center py-3 text-xl font-[roboto]">
-      Rahul
-    </div>
-    <div class="p-4 flex flex-col gap-3 text-sm">
-      <div class="justifu-end bg-[#47a3f3] px-3 py-2 rounded-lg w-full">Hello Rahul, how are you?</div>
-      <div class="justify-start bg-[#52606d] px-3 py-2 rounded-lg w-full">Hi Varakumar, I am good. How about you?</div>
-      <div class="justify-end bg-[#47a3f3] px-3 py-2 rounded-lg w-full">I'm fine. I published my website recently</div>
-      <div class="justify-start bg-[#52606d] px-3 py-2 rounded-lg w-full">Oh great Varakumar! Can you send me the URL?</div>
-      <div class="justify-end bg-[#47a3f3] px-3 py-2 rounded-lg w-full">https://varakumar.ccbp.tech</div>
-      <div class="justify-start bg-[#52606d] px-3 py-2 rounded-lg w-full">Awesome Varakumar, where did you learn?</div>
-      <div class="justify-end bg-[#47a3f3] px-3 py-2 rounded-lg w-full">NxtWave CCBP 4.0 Program</div>
-    </div>
-  </div>
+<body>
+         <div class="main">
+            <div class="sub">
+                <h1 class="h1">Todolist</h1>
+                 <p class="para">Each day i will accomplish one thing om my todo list</p>
+                 <h3 class="h3">Read a Book</h3>
+                 <p>I don't think that the human race will survive the next thousand years, unless we spread into space.
+                There are too many accidents that can befall life on a single planet. But I'm an optimist...</p>
+                <div class="b2">
+                <button class="button">Start</button>
+                </div>
+                <p class="skip">Dont't Skip introduction</p>
+             </div>
+            </div>
+        
 </body>
 </html>
